@@ -152,8 +152,15 @@
         
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
+        		<artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                    --add-opens calendarApp.ui/calendarApp.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                    --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+	    </plugin>
 
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -180,7 +187,65 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-            </plugin>
+        </plugin>
+        <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.6</version>
+        <!-- Usage: mvn javafx:run -->
+                <configuration>
+                <!--May be necessary to change the adress to mainClass later!-->
+                <mainClass>calendarApp.ui/calendarApp.ui.CalendarApp</mainClass>
+                <!-- rest of options are for jlink -->
+                <compress>2</compress>
+                <noHeaderFiles>true</noHeaderFiles>
+                <stripDebug>true</stripDebug>
+                <noManPages>true</noManPages>
+                <launcher>calendarappfx</launcher>
+                <jlinkImageName>calendarappfx</jlinkImageName>
+                <jlinkZipName>calendarappfx</jlinkZipName>
+                </configuration>
+        </plugin>
+
+        <!-- config above and below taken from https://dev.to/cherrychain/javafx-jlink-and-jpackage-h9 -->
+        <plugin>
+            <groupId>org.panteleyev</groupId>
+            <artifactId>jpackage-maven-plugin</artifactId>
+            <version>1.4.0</version>
+            <configuration>
+                <name>CalendarAppFX</name>
+                <appVersion>1.0.0</appVersion>
+                <vendor>it1901</vendor>
+                <destination>target/dist</destination>
+                <module>calendarApp.ui/calendarApp.ui.CalendarApp</module>
+                <runtimeImage>target/calendarappfx</runtimeImage>
+                <javaOptions>
+                    <option>-Dfile.encoding=UTF-8</option>
+                </javaOptions>
+                <!-- linux options --> 
+                <linuxShortcut>true</linuxShortcut>
+                <linuxMenuGroup>CalendarAppFX</linuxMenuGroup>
+
+                <!-- windows options --> 
+                <winDirChooser>true</winDirChooser>
+                <winShortcut>true</winShortcut>
+                <winMenu>true</winMenu>
+                <winMenuGroup>CalendarAppFX</winMenuGroup>
+            </configuration>
+        </plugin>
+
+        <!-- Run the checkstyle code quality tool -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-checkstyle-plugin</artifactId>
+        </plugin>
+
+        <!-- Run the spotbugs code quality tool -->
+        <plugin>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-maven-plugin</artifactId>
+        </plugin>
+        
         </plugins>
     </build>
 </project>
